app code enhance

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 	<div class="container">
 		<h1>Service Worker Web Guild Demo</h1>
 
-		<h3>Images from Mars road trip</h3>
+		<p>Images from Mars road trip</p>
 
 		<div id="root"></div>
 	</div>
